--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Projeto - HTML & CSS</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -51,23 +51,27 @@
         <div class="card">
           <h3>Web Design</h3>
           <p>Sites mode</p>
-          <section id="portfolio" class="portfolio">
+        </div>
+    </div>
+  </section>
+
+  <section id="portfolio" class="portfolio">
   <div class="container">
     <h2>Portfólio</h2>
     <p class="subtitle">Alguns projetos recentes desenvolvidos com HTML, CSS e JavaScript</p>
     <div class="galeria">
       <div class="projeto">
-        <img src="https://picsum.photos/300/200?random=1" alt="Projeto 1">
+        <img src="../Projeto-HTML---CSS/img/img1.png" alt="Projeto 1">
         <h3>Projeto 1</h3>
         <p>Landing page institucional 100% responsiva.</p>
       </div>
       <div class="projeto">
-        <img src="https://picsum.photos/300/200?random=2" alt="Projeto 2">
+        <img src="../Projeto-HTML---CSS/img/img1.png" alt="Projeto 2">
         <h3>Projeto 2</h3>
         <p>To-Do List com HTML, CSS e JS puro.</p>
       </div>
       <div class="projeto">
-        <img src="https://picsum.photos/300/200?random=3" alt="Projeto 3">
+        <img src="../Projeto-HTML---CSS/img/img1.png" alt="Projeto 3">
         <h3>Projeto 3</h3>
         <p>Dashboard com layout limpo e responsivo.</p>
       </div>
