--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         <p>Landing page institucional 100% responsiva.</p>
       </div>
       <div class="projeto">
-        <img src="../Projeto-HTML---CSS/img/img1.png" alt="Projeto 2">
+        <img src="../Projeto-HTML---CSS/img/img2.png" alt="Projeto 2">
         <h3>Projeto 2</h3>
         <p>To-Do List com HTML, CSS e JS puro.</p>
       </div>
       <div class="projeto">
-        <img src="../Projeto-HTML---CSS/img/img1.png" alt="Projeto 3">
+        <img src="../Projeto-HTML---CSS/img/img3.webp" alt="Projeto 3">
         <h3>Projeto 3</h3>
         <p>Dashboard com layout limpo e responsivo.</p>
       </div>
